--- a/css/custom.css
+++ b/css/custom.css
@@ -7,10 +7,11 @@ p{
     font-family: 'Montserrat', sans-serif;
     font-weight: 300;
     font-size: 1rem;
+    color: #4d3319;
 }
 .starter-template {
   padding: 3rem 1.5rem;
-  text-align: center;
+  text-align: left;
 }
 
 .lead {
@@ -30,6 +31,7 @@ p{
     border-right: white 10px solid;
     padding:20px;
     margin-bottom:50px;
+    text-align: center;
 }
 
 .col-md-4:last-child {
@@ -38,6 +40,10 @@ p{
 
 .lead-narrow {
     max-width: 40rem;
+}
+
+.lead-wide {
+    max-width: 60rem;
 }
 
 .card {
@@ -85,10 +91,35 @@ caption {
     font-weight: 300;
 }
 
-h1, h3 {
-    color: #8080ff;
+h1, h2 {
+  color: rgba(255, 0, 0, 0.5);
+}
+
+h1 {
+    text-align: center;
+}
+
+h3 {
+    color: rgba(255, 0, 0, 0.5);
+    text-align: center;
+}
+
+h5 {
+    font-style:italic;
 }
 
 .float {
     float: right;
+}
+
+.center-align-buttons {
+    text-align: center;
+}
+
+.btn {
+    background-color: rgba(255, 0, 0, 0.5);
+}
+
+.btn-outline-light {
+    background-color: #ff6666;
 }
