--- a/css/custom.css
+++ b/css/custom.css
@@ -225,3 +225,14 @@ h1, h2, h3 {
         margin-bottom:20px;
         }
 }
+
+@media (max-width: 768px) {
+    .carousel {
+            display:none;
+        }
+      
+    .image-not-carousel {
+        display: block;
+        margin-bottom:20px;
+        }
+}
